Solving cors with test domain